add benchmark infrastructure and csmith dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,22 +15,21 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -Wall -Wextra -Wpedantic")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 
-# TODO: (jr) is this necessary?: set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
-
 # ---------------------------------------------------------------------------
 # Dependencies
 # ---------------------------------------------------------------------------
 include("${CMAKE_SOURCE_DIR}/clang-tidy.cmake")
 include("${CMAKE_SOURCE_DIR}/gperf.cmake")
 include("${CMAKE_SOURCE_DIR}/vendor/googletest.cmake")
-
-# todo: (jr) coming soon! include("${CMAKE_SOURCE_DIR}/vendor/benchmark.cmake")
+include("${CMAKE_SOURCE_DIR}/vendor/csmith.cmake")
+include("${CMAKE_SOURCE_DIR}/vendor/benchmark.cmake")
 
 # ---------------------------------------------------------------------------
 # Includes
 # ---------------------------------------------------------------------------
 include_directories(
     ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_SOURCE_DIR}/tools
     ${GTEST_INCLUDE_DIR}
     ${BENCHMARK_INCLUDE_DIR}
 )
@@ -49,14 +48,17 @@ set(SRC_CC
     "${CMAKE_SOURCE_DIR}/src/tokenizer.cc"
 )
 
-# "${CMAKE_SOURCE_DIR}"
+set(TOOLS_H
+    "${CMAKE_SOURCE_DIR}/tools/csmith.h"
+)
+
 set(TEST_CC
     "${CMAKE_SOURCE_DIR}/test/test_tokenizer.cc"
 )
 
-# todo: comming soon! set(BENCH_CC
-# todo: comming soon!     bench/bm_dummy.cc
-# todo: comming soon! )
+set(BENCH_CC
+    bench/bm_tokenizer.cc
+)
 
 # ---------------------------------------------------------------------------
 # Targets
@@ -71,23 +73,26 @@ target_link_libraries(qcp libqcp)
 # ---------------------------------------------------------------------------
 add_executable(tester test/tester.cc ${TEST_CC})
 target_link_libraries(tester libqcp gtest)
+
 enable_testing()
 add_test(qcp tester)
 
 # ---------------------------------------------------------------------------
 # Benchmarks
 # ---------------------------------------------------------------------------
-# todo: coming soon! get_property(BENCHMARK_HEADERS TARGET benchmark PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
-# todo: coming soon!
-# todo: coming soon! add_executable(bench bench/benchmark.cc ${BENCH_CC} ${BENCHMARK_HEADERS})
-# todo: coming soon! target_link_libraries(bench benchmark)
+get_property(BENCHMARK_HEADERS TARGET benchmark PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
+
+add_executable(bench bench/benchmark.cc ${BENCH_CC} ${BENCHMARK_HEADERS})
+target_link_libraries(bench libqcp benchmark)
 
 # ---------------------------------------------------------------------------
 # Linting
 # ---------------------------------------------------------------------------
-add_clang_tidy_target(src_linting "${SRC_CC}")
 add_clang_tidy_target(include_linting "${INCLUDE_H}")
+add_clang_tidy_target(src_linting "${SRC_CC}")
+add_clang_tidy_target(tools_linting "${TOOLS_H}")
 add_clang_tidy_target(test_linting "${TEST_CC}")
+add_clang_tidy_target(bench_linting "${BENCH_CC}")
 
 add_custom_target(lint)
 add_dependencies(lint include_linting src_linting test_linting)
