--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(SCMAKE_CXX_COMPILER "g++")
 find_package(LLVM REQUIRED CONFIG)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_CMAKE_DIR}")
 include(AddLLVM)
-include_directories(${LLVM_INCLUDE_DIRS})
+include_directories(SYSTEM ${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 llvm_map_components_to_libnames(llvm core)
 
@@ -36,6 +36,8 @@ include("${CMAKE_SOURCE_DIR}/gperf.cmake")
 include("${CMAKE_SOURCE_DIR}/vendor/googletest.cmake")
 include("${CMAKE_SOURCE_DIR}/vendor/csmith.cmake")
 include("${CMAKE_SOURCE_DIR}/vendor/benchmark.cmake")
+
+# include("${CMAKE_SOURCE_DIR}/vendor/alive2.cmake")
 
 # ---------------------------------------------------------------------------
 # Includes
@@ -60,10 +62,17 @@ set(INCLUDE_H
     "${CMAKE_SOURCE_DIR}/include/loc.h"
     "${CMAKE_SOURCE_DIR}/include/scope.h"
     "${CMAKE_SOURCE_DIR}/include/type.h"
+    "${CMAKE_SOURCE_DIR}/include/basetype.h"
+    "${CMAKE_SOURCE_DIR}/include/typefactory.h"
     "${CMAKE_SOURCE_DIR}/include/tracer.h"
     "${CMAKE_SOURCE_DIR}/include/stringpool.h"
     "${CMAKE_SOURCE_DIR}/include/expr.h"
     "${CMAKE_SOURCE_DIR}/include/llvmemitter.h"
+    "${CMAKE_SOURCE_DIR}/include/defs/defines.def"
+    "${CMAKE_SOURCE_DIR}/include/defs/tokens.def"
+    "${CMAKE_SOURCE_DIR}/include/defs/operators.def"
+    "${CMAKE_SOURCE_DIR}/include/defs/and_or_operators.def"
+    "${CMAKE_SOURCE_DIR}/include/defs/assign_operators.def"
 )
 
 set(SRC_CC
@@ -78,10 +87,11 @@ set(TOOLS_H
     "${CMAKE_SOURCE_DIR}/tools/csmith.h"
 )
 
-set(TEST_CC
+set(TEST_H
 
     # "${CMAKE_SOURCE_DIR}/test/test_tokenizer.cc"
-    "${CMAKE_SOURCE_DIR}/test/test_types.cc"
+    # "${CMAKE_SOURCE_DIR}/test/test_types.cc"
+    "${CMAKE_SOURCE_DIR}/test/test_parser.h"
 )
 
 set(BENCH_CC
@@ -106,6 +116,9 @@ target_link_libraries(tester libqcp gtest)
 enable_testing()
 add_test(qcp tester)
 
+# copy test1 folder to build directory
+file(COPY ${CMAKE_SOURCE_DIR}/test/test1 DESTINATION ${CMAKE_BINARY_DIR})
+
 # ---------------------------------------------------------------------------
 # Benchmarks
 # ---------------------------------------------------------------------------
@@ -120,7 +133,7 @@ target_link_libraries(bench libqcp benchmark)
 add_clang_tidy_target(include_linting "${INCLUDE_H}")
 add_clang_tidy_target(src_linting "${SRC_CC}")
 add_clang_tidy_target(tools_linting "${TOOLS_H}")
-add_clang_tidy_target(test_linting "${TEST_CC}")
+add_clang_tidy_target(test_linting "${TEST_H}")
 add_clang_tidy_target(bench_linting "${BENCH_CC}")
 
 add_custom_target(lint)
